--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <nav>
             <ul id="menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">Como economizar</a></li>
-                <li><a href="">Jogos</a></li>
+                <li>Home</li>
+                <li>Como economizar</li>
+                <li>Jogos</li>
                 
             </ul>
         </nav>
