--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <div id="logos">
-
+            <img src="./images/Logos/Conta Gotas/logo_conta_gotas.png" alt="">
+            <img src="./images/Logos/Liquefeito/logo_liquefeito.png" alt="">
         </div>
         <nav>
             <ul id="menu">
@@ -24,13 +25,50 @@
     </header>
     
     <main>
-
+        <div id="geral">
+            <div id="video">
+                <h1>Conheça nosso projeto</h1>
+            </div>
+            <div id="lado-direito">
+               <div id="redes">
+                <h1>Redes Sociais</h1>
+               </div>
+               <div id="login">
+                <h1>Faça seu Login</h1>
+               </div> 
+            </div>
+            <div id="apoio">
+                <h1>Apoio</h1>
+            </div>
+        </div>
 
 
     </main>
 
     <footer>
-
+        <div class="item">
+            <h1>Sobre nós</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In dolorum reprehenderit molestias distinctio laudantium eaque, commodi necessitatibus at voluptatibus tenetur alias sint nesciunt quaerat aperiam, eveniet culpa magni odit quas.</p>
+            <img src="./images/Logos/Conta Gotas/logo_conta_gotas.png" alt="">
+        </div>
+        <div class="item">
+            <h1>Mapa do Site</h1>
+            <h2>HOME</h2>
+            <h2>COMO ECONOMIZAR</h2>
+            <h2>JOGOS</h2>
+            <h2>CADASTROS</h2>
+            <h2>LOGIN</h2>
+        </div>
+        <div class="item">
+            <h1>Contatos</h1>
+            <p>Telefone: 85 4002-8922</p>
+            <p>Whatsapp: 61 97070-9202</p>
+            <p>Email: contagotas@gmail.com</p>
+            <p>Endereço:
+                Rua das Flores, 123, Bairro Jardim, Cidade Verde, Estado Azul
+            </p>
+            <p>Segunda a sexta, das 7h ás 20h <br> Exceto feriados nacionais e locais</p>
+        </div>
 
 
     </footer>
