--- a/index.html
+++ b/index.html
@@ -28,17 +28,45 @@
         <div id="geral">
             <div id="video">
                 <h1>Conheça nosso projeto</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/I6rufOlNyYM?si=1SyWOTKK2wwdqzF2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div id="lado-direito">
                <div id="redes">
                 <h1>Redes Sociais</h1>
+                <img src="./images/redes/Facebook.png" alt="">
+                <img src="./images/redes/LinkedIn.png" alt="">
+                <img src="./images/redes/X.png" alt="">
+                <img src="./images/redes/TikTok.png" alt="">
+                <img src="./images/redes/YouTube.png" alt="">
+                <img src="./images/redes/TikTok.png" alt="">
                </div>
+               <hr>
                <div id="login">
                 <h1>Faça seu Login</h1>
+                <p>Não tem cadastro?
+                    <a href="#">Seja um voluntario!</a>
+                </p>
+                <input type="email" name="" id="Email" placeholder="Digite seu email" class="opções">
+                <input type="password" name="senha" id="Senha" placeholder="Digite sua senha" class="opções">
                </div> 
+               <div id="mais">
+                <label>
+                    <input type="checkbox" name="lembrar" id="lembrar">
+                    lembrar me
+                </label>
+                <a href="#">Esqueceu a senha?</a>
+               </div>
+               <button>
+                Entrar
+               </button>
             </div>
             <div id="apoio">
                 <h1>Apoio</h1>
+                <img src="./images/Apoio/acer.png" alt="">
+                <img src="./images/Apoio/alibaba.png" alt="">
+                <img src="./images/Apoio/canon.png" alt="">
+                <img src="./images/Apoio/compac.png" alt="">
+                <img src="./images/Apoio/hp.png" alt="">
             </div>
         </div>
 
