--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTA-GOTAS</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <header>
         <div id="logos">
@@ -14,59 +16,62 @@
         </div>
         <nav>
             <ul id="menu">
-                <li>Home</li>
-                <li>Como economizar</li>
-                <li>Jogos</li>
-                
+                <li><a href="./index.html">Home</a></li>
+               <li><a href="./como.html">Como economizar</a></li> 
+               <li><a href="https://www.escolagames.com.br/jogos/missao-planeta-agua">Jogos</a></li>
+
             </ul>
         </nav>
 
 
     </header>
-    
+
     <main>
         <div id="geral">
             <div id="video">
                 <h1>Conheça nosso projeto</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/I6rufOlNyYM?si=1SyWOTKK2wwdqzF2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/I6rufOlNyYM?si=1SyWOTKK2wwdqzF2"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div id="lado-direito">
-               <div id="redes">
-                <h1>Redes Sociais</h1>
-                <img src="./images/redes/Facebook.png" alt="">
-                <img src="./images/redes/LinkedIn.png" alt="">
-                <img src="./images/redes/X.png" alt="">
-                <img src="./images/redes/TikTok.png" alt="">
-                <img src="./images/redes/YouTube.png" alt="">
-                <img src="./images/redes/TikTok.png" alt="">
-               </div>
-               <hr>
-               <div id="login">
-                <h1>Faça seu Login</h1>
-                <p>Não tem cadastro?
-                    <a href="#">Seja um voluntario!</a>
-                </p>
-                <input type="email" name="" id="Email" placeholder="Digite seu email" class="opções">
-                <input type="password" name="senha" id="Senha" placeholder="Digite sua senha" class="opções">
-               </div> 
-               <div id="mais">
-                <label>
-                    <input type="checkbox" name="lembrar" id="lembrar">
-                    lembrar me
-                </label>
-                <a href="#">Esqueceu a senha?</a>
-               </div>
-               <button>
-                Entrar
-               </button>
+                <div id="redes">
+                    <h1>Redes Sociais</h1>
+                   <a href="https://www.facebook.com/?locale=pt_BR"> <img src="./images/redes/Facebook.png" alt=""></a>
+                  <a href="https://www.instagram.com/"><img src="./images/redes/LinkedIn.png" alt=""></a>
+                  <a href="https://www.google.com/aclk?sa=l&ai=DChsSEwja-pf_tuqOAxXhX0gAHR1JCb0YACICCAEQABoCY2U&ae=2&co=1&ase=2&gclid=CjwKCAjwy7HEBhBJEiwA5hQNogNn297S7vr8apzgYoXDK-l3_JoxKCQCxaU6OB-M9XZyUIOfRqjHthoCVSIQAvD_BwE&category=acrcp_v1_87&sig=AOD64_3yk4s9v5EI89jzEqJnlsa3Lbz7Hw&q&nis=4&adurl&ved=2ahUKEwj_hJP_tuqOAxWmH7kGHdmyO8kQ0Qx6BAgJEAE"><img src="./images/redes/X.png" alt=""></a>
+                 <a href="https://x.com/"><img src="./images/redes/TikTok.png" alt=""></a>
+                    <a href="https://www.youtube.com/"><img src="./images/redes/YouTube.png" alt=""></a>
+                  <a href="https://www.tiktok.com/pt-BR/"><img src="./images/redes/TikTok.png" alt=""></a>
+                </div>
+                <hr>
+                <div id="login">
+                    <h1>Faça seu Login</h1>
+                    <p>Não tem cadastro?
+                        <a href="#">Seja um voluntario!</a>
+                    </p>
+                    <input type="email" name="" id="Email" placeholder="Digite seu email" class="opções">
+                    <input type="password" name="senha" id="Senha" placeholder="Digite sua senha" class="opções">
+                    <div id="mais">
+                        <label>
+                            <input type="checkbox" name="lembrar" id="lembrar">
+                            lembrar me
+                        </label>
+                        <a href="#">Esqueceu a senha?</a>
+                    </div>
+                    <button>
+                        Entrar
+                    </button>
+                </div>
             </div>
             <div id="apoio">
                 <h1>Apoio</h1>
-                <img src="./images/Apoio/acer.png" alt="">
-                <img src="./images/Apoio/alibaba.png" alt="">
-                <img src="./images/Apoio/canon.png" alt="">
-                <img src="./images/Apoio/compac.png" alt="">
-                <img src="./images/Apoio/hp.png" alt="">
+              <a href="https://br-store.acer.com/aspire%20intel?_q=aspire%20intel&map=ft&utm_source=googleads&utm_medium=cpc&utm_campaign=bra_mootag_acer_pesquisa&utm_content=ggl_src_awa__pesquisa_mar%C3%A7o&utm_term=dvery_sea_var_sta_csd_pesquisa_mar%C3%A7o_aspire&gad_source=1&gad_campaignid=20730515727&gbraid=0AAAAADOMtM4rxxBYObkB260i8DXstrfo9&gclid=CjwKCAjwy7HEBhBJEiwA5hQNoi4Hep0YTA4Q2w7_qxYSONoSOxm4qPIW4QRSXffhin1hjP0K0f3B8RoCKiMQAvD_BwE"><img src="./images/Apoio/acer.png" alt=""></a> 
+              <a href="https://www.alibaba.com/"><img src="./images/Apoio/alibaba.png" alt=""></a> 
+               <a href="https://global.canon/en/?utm_source=canon.com&utm_medium=referral&utm_campaign=top"><img src="./images/Apoio/canon.png" alt=""></a>
+               <a href="https://www.compaq.com/"><img src="./images/Apoio/compac.png" alt=""></a>
+               <a href="https://www.google.com/aclk?sa=l&ai=DChsSEwixq9TwteqOAxX6WEgAHViJBaYYACICCAEQBhoCY2U&ae=2&co=1&ase=2&gclid=CjwKCAjwy7HEBhBJEiwA5hQNonuCVpHGnH3IWGBswKfCqDIZhK8C4ROO4LVzjkRHpBWqMTYLZNcp1hoClCEQAvD_BwE&category=acrcp_v1_87&sig=AOD64_2k6ePQeTm9iD0n2J292osJ0fUj0g&q&nis=4&adurl&ved=2ahUKEwiU687wteqOAxXfL7kGHVgkNywQ0Qx6BAhDEAE"><img src="./images/Apoio/hp.png" alt=""></a>
             </div>
         </div>
 
@@ -76,16 +81,18 @@
     <footer>
         <div class="item">
             <h1>Sobre nós</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In dolorum reprehenderit molestias distinctio laudantium eaque, commodi necessitatibus at voluptatibus tenetur alias sint nesciunt quaerat aperiam, eveniet culpa magni odit quas.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In dolorum reprehenderit molestias distinctio
+                laudantium eaque, commodi necessitatibus at voluptatibus tenetur alias sint nesciunt quaerat aperiam,
+                eveniet culpa magni odit quas.</p>
             <img src="./images/Logos/Conta Gotas/logo_conta_gotas.png" alt="">
         </div>
         <div class="item">
             <h1>Mapa do Site</h1>
-            <h2>HOME</h2>
-            <h2>COMO ECONOMIZAR</h2>
-            <h2>JOGOS</h2>
-            <h2>CADASTROS</h2>
-            <h2>LOGIN</h2>
+           <h2><a href="./index.html">HOME</a></h2> 
+           <h2><a href="./como.html">COMO ECONOMIZAR</a></h2>
+            <h2><a href="https://www.escolagames.com.br/jogos/missao-planeta-agua">JOGOS</a></h2>
+            <h2><a href="#">CADASTROS</a></h2>
+            <h2><a href="#">LOGIN</a></h2>
         </div>
         <div class="item">
             <h1>Contatos</h1>
@@ -101,4 +108,5 @@
 
     </footer>
 </body>
+
 </html>
